# mp_os

./: .gitignore  CMakeLists.txt
allocator/allocator/: CMakeLists.txt
allocator/allocator/include/: allocator.h
allocator/allocator_boundary_tags/: CMakeLists.txt
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: CMakeLists.txt  allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/: CMakeLists.txt
allocator/allocator_buddies_system/tests/: CMakeLists.txt
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_red_black_tree/: CMakeLists.txt
allocator/allocator_red_black_tree/tests/: CMakeLists.txt
arithmetic/big_integer/include/: big_integer.h
arithmetic/big_integer/src/: big_integer.cpp
arithmetic/continued_fraction/: CMakeLists.txt
arithmetic/fraction/: CMakeLists.txt
arithmetic/fraction/include/: fraction.h
arithmetic/fraction/src/: fraction.cpp
arithmetic/fraction/tests/: CMakeLists.txt  fraction_tests.cpp
associative_container/: CMakeLists.txt
associative_container/hash_table/: CMakeLists.txt
associative_container/include/: associative_container.h
associative_container/search_tree/: CMakeLists.txt
common/: CMakeLists.txt
common/include/: extra_utility.h
common/src/: extra_utility.cpp  file_cannot_be_opened.cpp
logger/logger/src/: logger.cpp
practice/: CMakeLists.txt
practice/b_plus_tree/: CMakeLists.txt  b_plus_tree.cpp
practice/semaphores_client/: CMakeLists.txt  semaphores_client.c
practice/semaphores_server/: CMakeLists.txt  semaphores_server.c
(+44 files in other folders)
